--- a/homework07/test_work_in_progress.ipynb
+++ b/homework07/test_work_in_progress.ipynb
@@ -1,6 +1,47 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<_io.BufferedReader name='C:\\\\cs102\\\\homework07\\\\index.html'>\nb'<html>Directory index file</html>\\n'\n"
+    }
+   ],
+   "source": [
+    "f = open('C:\\\\cs102\\\\homework07\\\\index.html', 'rb')\n",
+    "print(f)\n",
+    "print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "b'123HTTP/1.1 code responses[code]\\r\\n'\n"
+    }
+   ],
+   "source": [
+    "s = b'123'\n",
+    "s += 'HTTP/1.1 code responses[code]\\r\\n'.encode()\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python",
@@ -22,44 +63,6 @@
    "display_name": "Python 3.7.5 64-bit"
   }
  },
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "sequence item 0: expected str instance, bytes found",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-0b245bf11b98>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mibuffer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34mb'GET / HTTP/1.1\\r\\nHost: localhost:9000\\r\\nUser-Agent: python-requests/2.22.0\\r\\nAccept-Encoding: gzip, deflate\\r\\nAccept: */*\\r\\nConnection: keep-alive'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0munparsed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mibuffer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0munparsed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0munparsed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ASCII'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mheaders_lst\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0munparsed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\r\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: sequence item 0: expected str instance, bytes found"
-     ]
-    }
-   ],
-   "source": [
-    "ibuffer = [b'GET / HTTP/1.1\\r\\nHost: localhost:9000\\r\\nUser-Agent: python-requests/2.22.0\\r\\nAccept-Encoding: gzip, deflate\\r\\nAccept: */*\\r\\nConnection: keep-alive']\n",
-    "unparsed = \"\".join(ibuffer)\n",
-    "unparsed = unparsed.decode('ASCII')\n",
-    "\n",
-    "headers_lst = unparsed.split('\\r\\n')\n",
-    "print(headers_lst)\n",
-    "headers = {}\n",
-    "for header in headers_lst[1:]:\n",
-    "    key, value = header.split(': ')\n",
-    "    headers[key] = value\n",
-    "print(headers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ]
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
