async_http finished

--- a/homework07/test_work_in_progress.ipynb
+++ b/homework07/test_work_in_progress.ipynb
@@ -52,20 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "200\n"
+     "text": "405\n"
     }
    ],
    "source": [
     "import requests\n",
     "\n",
-    "r = requests.get(\"http://localhost:9000/dir1/space%20in%20name.txt\")\n",
-    "print(r.status_code)"
+    "r = requests.post(f\"http://localhost:9000/dir1/page.html\")\n",
+    "print(r.status_code)\n"
    ]
   },
   {
@@ -131,7 +131,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def initiate_send(self):\n",
+    "        while self.producer_fifo and self.connected:\n",
+    "            first = self.producer_fifo[0]\n",
+    "            # handle empty string/buffer or None entry\n",
+    "            if not first:\n",
+    "                del self.producer_fifo[0]\n",
+    "                if first is None:\n",
+    "                    self.handle_close()\n",
+    "                    return\n",
+    "\n",
+    "            # handle classic producer behavior\n",
+    "            obs = self.ac_out_buffer_size\n",
+    "            try:\n",
+    "                data = first[:obs]\n",
+    "            except TypeError:\n",
+    "                data = first.more()\n",
+    "                if data:\n",
+    "                    self.producer_fifo.appendleft(data)\n",
+    "                else:\n",
+    "                    del self.producer_fifo[0]\n",
+    "                continue\n",
+    "\n",
+    "            if isinstance(data, str) and self.use_encoding:\n",
+    "                data = bytes(data, self.encoding)\n",
+    "\n",
+    "            # send the data\n",
+    "            try:\n",
+    "                num_sent = self.send(data)\n",
+    "            except OSError:\n",
+    "                self.handle_error()\n",
+    "                return\n",
+    "\n",
+    "            if num_sent:\n",
+    "                if num_sent < len(data) or obs < len(first):\n",
+    "                    self.producer_fifo[0] = first[num_sent:]\n",
+    "                else:\n",
+    "                    del self.producer_fifo[0]\n",
+    "            # we tried to send some actual data\n",
+    "            return"
+   ]
   }
  ],
  "metadata": {
