--- a/homework07/test_work_in_progress.ipynb
+++ b/homework07/test_work_in_progress.ipynb
@@ -172,6 +172,56 @@
     "            # we tried to send some actual data\n",
     "            return"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<Logger __main__ (INFO)>\n"
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(\n",
+    "        filename='logs.txt',\n",
+    "        level='INFO')\n",
+    "        #format=\"%(name)s: %(process)d %(message)s\")\n",
+    "log = logging.getLogger(__name__)\n",
+    "print(log)\n",
+    "log.debug(\"Incoming connection from\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "c:\\cs102\\homework07\\index.html\n"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "test = ''\n",
+    "root = Path.cwd()\n",
+    "p = root / test / 'index.html'\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
