--- a/homework07/test_work_in_progress.ipynb
+++ b/homework07/test_work_in_progress.ipynb
@@ -218,6 +218,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2020-04-30 17:58:41.308385\n"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "curr_time = str(datetime.today())\n",
+    "print(curr_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
